Issue #66: fixed spaces in amendment content. Rolled back changes to transformation document.ftl, and instead fixed spacing issue on the css level - which is more correct anyways.

--- a/web/css/akomaNtoso-override.css
+++ b/web/css/akomaNtoso-override.css
@@ -84,6 +84,10 @@
     display: inline;
 }
 
+.akomaNtoso .num:after {
+    content: " ";
+}
+
 .akomaNtoso .authorialNote {
     color: blue;
     font-size: 70%;
